8380322: [lworld] Identity records use preview feature